--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -18,6 +18,8 @@
     flex-wrap: wrap
     width: 100%
     justify-content: space-between
+    & .field
+      width: 185px
 .btn
   position: absolute
   bottom: 40px
